# stile

./: Cargo.toml  LICENSE  README.md  egraph.py  example.py  pyproject.toml  rustfmt.toml  test.py  todo.txt  type_nodes.py  typed_numpy.py
.github/workflows/: publish.yml
examples/: demo.py  demo_pallas_gpu.py  example.py
python/stile/: __init__.py  indexing.py  numpy.py  specification.py  type.py  verification.py
python/stile/jax/: __init__.py  _core.py  random.py
python/stile/numpy/: _core.py  random.py
python/stile/torch/: __init__.py  _core.py  random.py
python/stile/triton/: __init__.py  _core.py
src/: lib.rs
stile/: __init__.py  frozen_counter.py  indexing.py  reference.py  specification.py  tracing.py  type.py  verification.md  verification.py
stile/jax/: __init__.py  _core.py  random.py
stile/jax/pallas/: __init__.py  _core.py
stile/numerical/: __init__.py  affine.py  evaluator.py  hardware.py  sensitivity.py  typed_ops.py
stile/numpy/: __init__.py  _core.py  random.py
stile/torch/: __init__.py  _core.py  random.py
stile/triton/: __init__.py  _core.py
tests/: conftest.py  test_aa_dtype_sensitivity.py  test_aa_einsum_demo.py  test_aa_field_stub.py  test_aa_sensitivity.py  test_affine_arithmetic.py  test_affine_intervals.py  test_buggy_kernels.py  test_causal_attention.py  test_cross_framework_reference.py  test_dim_annotation_predicate.py  test_fused_moe.py  test_loop_invariants.py  test_lv_substitution_sum.py  test_mask_bias_convergence.py  test_max_tag.py  test_normalization_inequivalence.py  test_numerical_demo_tf32.py  test_numerical_evaluator.py  test_paged_flash_attention.py  test_pallas_gpu.py  test_parametric_reduce.py  test_qwen_resblock_components.py  test_rolled_loops.py  test_runtime_gather.py  test_runtime_scatter_moe.py  test_scatter_writeback.py  test_scope.py  test_specification.py  test_stile.py  test_tagged_tensors.py  test_tagged_untagged_mixing.py  test_tjax_mask.py  test_type_core.py  test_typed_jax.py  test_typed_numpy.py  test_typed_pallas.py  test_typed_result_symbolic.py  test_typed_torch.py  test_typed_triton.py  (+1 more)
typed_numpy/: __init__.py  egraph.py
