[package]
name = "typed_numpy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "typed_numpy"
crate-type = ["cdylib"]

[dependencies]
egglog = "1.0.0"
pyo3 = "0.27.0"

[build]
rustflags = ["-A non_snake_case"]

