[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stile"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "einops>=0.8.1",
    "numpy>=1.24.4",
]

[project.optional-dependencies]
jax = ["jax>=0.4.0"]
torch = ["torch>=2.0.0"]
all = [
    "jax>=0.4.0",
    "torch>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["stile"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
